# OOP_OOP

./: CMakeLists.txt  README.md  test.cpp  test.py
lab1/: lab1.cpp  lab1_ex1.cpp  lab1_ex2.cpp  lab1_ex3.cpp  lab1_ex4.cpp
lab2/: Menu.py  faculties.txt  functions.py  lab2_ex1.cpp  lab2_ex5a.cpp  lab_2.py  modules.py
lab2/Lab2/: Menu.py  exeptions.py  functions.py  lab_2.py  modules.py  operation_log.txt
lab2/Lab2_exercises/: lab2_ex5b.cpp
