cmake_minimum_required(VERSION 3.28)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP
        lab1/lab1.cpp
        lab1/lab1_ex1.cpp
        lab1/lab1_ex2.cpp
        lab1/lab1_ex3.cpp
        lab1/lab1_ex4.cpp
        test.cpp
        lab2/Lab2_exercises/lab2_ex1.cpp
        lab2/Lab2_exercises/lab2_ex2.cpp
        lab2/Lab2_exercises/lab2_ex3&4.cpp
        lab2/Lab2_exercises/lab2_ex5a.cpp
        lab2/Lab2_exercises/lab2_ex5b.cpp)
